<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">
    <item
        android:title="@string/title_minimized_dialogs"/>
    <item
        android:id="@+id/nav_1234"
        app:actionLayout="@layout/nav_minimized_dialogs"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />

    <item android:title="@string/current_neural_network_title">
        <menu>
            <item
                android:id="@+id/nav_nn_train"
                android:icon="@drawable/ic_fitness_center_black_24dp"
                android:title="@string/train"/>
            <item
                android:id="@+id/nav_nn_predict"
                android:icon="@drawable/ic_baseline_live_help_24"
                android:title="@string/predict"/>
            <item
                android:id="@+id/nav_nn_learn"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/learn"/>
            <item
                android:id="@+id/nav_project_actions"
                android:icon="@drawable/ic_android_black_24dp"
                android:title="@string/action_project_actions" />
            <item
                android:id="@+id/nav_nn_messages"
                android:icon="@drawable/ic_question_answer_black_24dp"
                android:title="@string/action_nn_messages"
                app:actionViewClass="android.widget.TextView"
                />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share"
                android:enabled="false"
                android:visible="false"/>
        </menu>
    </item>
    <item android:title="@string/title_drawer_other_stuff">
        <menu>
            <item
                android:id="@+id/nav_browse_data"
                android:icon="@drawable/ic_library_books_black_24dp"
                android:title="@string/title_browse_data" />
            <item
                android:id="@+id/nav_gen_package"
                android:icon="@drawable/ic_library_add_white_24dp"
                android:title="@string/action_gen_package" />
            <item
                    android:id="@+id/nav_emmlipedia"
                    android:icon="@drawable/ic_group_black_24dp"
                    android:title="@string/pn2pedia"
                    android:enabled="false"
                    android:visible="false"/>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/action_settings"
                    android:enabled="false"
                    android:visible="false"/>
            <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/action_home"/>
        </menu>
    </item>
</menu>
