<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:showIn="@layout/activity_main"
        tools:context="com.viveret.pocketn2.view.fragments.main.MainActivityFragment"
        android:gravity="center">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
        <Button
                android:id="@+id/btnSandbox"
                android:text="@string/sandbox_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Citrus"/>

        <Button
                android:id="@+id/action_challenge_mode"
                android:text="@string/challenge_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Citrus"/>

        <Button
                android:id="@+id/btnSettings"
                android:text="@string/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

        <Button
                android:id="@+id/btnAboutML"
                android:text="@string/more_about_machine_learning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Citrus"/>

        <Button
                android:id="@+id/btnAboutApp"
                android:text="@string/about_pocket_n2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Citrus"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/msg_in_development"
            android:padding="10dp"
            android:textAlignment="center"/>
</RelativeLayout>
