<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/fragment_root">
    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"/>
    <TextView
        android:id="@+id/tvErrorBody"
        style="@style/AppTheme.ErrorBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/fragment_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online_train_data_message"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnYesAndSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesAndSave"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/progressions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>
