<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.viveret.pocketn2.view.fragments.sandbox.TrainingMethodFragment">

    <TextView
        android:id="@+id/title"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etPackageSize"
            android:text="@string/package_size_lbl" />

        <EditText
            android:id="@id/etPackageSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_package_size"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/cbFit"
            android:text="@string/outputs_lbl" />

        <CheckBox
            android:id="@id/cbFit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/widget_select_directory" android:id="@+id/widget_select_directory" />

    <include layout="@layout/widget_file_name" android:id="@+id/widget_file_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/btnSelectTrainingDefaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvErrorBody"
        style="@style/AppTheme.ErrorBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
